Fixed name not overflowing

--- a/src/styles/text.scss
+++ b/src/styles/text.scss
@@ -20,3 +20,10 @@
     opacity: 0.5;
   }
 }
+
+.overflow-text {
+  width: 100%;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
